--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Gloria+Hallelujah&display=swap');
+
 /* variables */
 :root {
   --primary-color: #ffc636;
@@ -95,7 +97,46 @@ h4 {
 }
 
 /* mobile styles */
+.grid {
+  display: grid;
+  grid-template-columns: repeat(8, 1fr);
+}
 
+.site-nav {
+  margin: 0 20px;
+}
+
+.site-nav ul {
+  display: none;
+}
+
+.site-nav h1 {
+  font-family: 'Gloria Hallelujah', sans-serif;
+  grid-column: 1/4;
+  grid-row: 1;
+  padding-bottom: 10px;
+  border-bottom: 3px solid var(--primary-color);
+}
+
+#welcome {
+  padding: 0 20px 20px 20px;
+}
+
+.welcome-text {
+  grid-column: 1/6;
+}
+
+.welcome-img {
+  grid-column: 6/9;
+}
+
+.welcome-img img {
+  width: 200%;
+}
+
+.welcome-text a {
+  margin: 20px 0;
+}
 
 /* small tablets styles */
 @media screen and (min-width: 620px) {
@@ -117,3 +158,35 @@ h4 {
     font-size: 20px;
   }
 }
+
+/* grid test */
+/* .projects {
+  display: grid;
+  grid-gap: 5px;
+  grid-template-columns: repeat(12, 1fr);
+}
+
+.projects a {
+  background-color: gray;
+  padding: 20px;
+  text-align: center;
+}
+
+.projects img {
+  width: 100%;
+}
+
+.projects a:nth-child(2) {
+  grid-column: 2/6;
+  grid-row: 1;
+}
+
+.projects a:first-child {
+  grid-column: 5/9;
+  grid-row: 2;
+}
+
+.projects a:last-child {
+  grid-column: 8/12;
+  grid-row: 1;
+} */
