--- a/style.css
+++ b/style.css
@@ -100,6 +100,7 @@ h4 {
 .grid {
   display: grid;
   grid-template-columns: repeat(8, 1fr);
+  grid-gap: 10px;
 }
 
 .site-nav {
@@ -136,6 +137,59 @@ h4 {
 
 .welcome-text a {
   margin: 20px 0;
+}
+
+#porfolio {
+  background-image: url('./assets/images/square_bg.png');
+  background-size: cover;
+  background-position: bottom;
+  background-repeat: no-repeat;
+  padding: 30px 20px;
+}
+
+#porfolio h3 {
+  text-align: center;
+}
+
+.projects a {
+  grid-column: 1/9;
+  margin: 20px 0;
+  display: flex;
+}
+
+.projects a * {
+  max-width: 40%;
+  align-self: center;
+  margin: 0 20px;
+}
+
+.projects h4 {
+  color: #9994f7;
+}
+
+#skills {
+  background-color: #07083e;
+  padding: 30px 20px;
+}
+
+#skills h3 {
+  text-align: center;
+}
+
+#skills ul {
+  margin: 40px 0;
+}
+
+#skills ul li {
+  background-color: rgba(0, 0, 0, 0.2);
+  padding: 10px;
+  grid-column: span 4;
+  text-align: center;
+}
+
+#skills img {
+  height: 80px;
+  margin: 10px auto;
 }
 
 /* small tablets styles */
