--- a/style.css
+++ b/style.css
@@ -50,19 +50,25 @@ body {
   transform: scale(0.98);
 }
 
+.button:focus {
+  outline: none;
+}
+
 input,
 textarea {
   background-color: rgba(255, 255, 255, 0.05);
   padding: 10px 16px;
   color: #f2f2f2;
+  font-size: 16px;
   border: 2px solid #9893d8;
   border-radius: 20px;
 }
 
-.button:focus,
 input:focus,
 textarea:focus {
   outline: none;
+  border: 2px solid var(--primary-color);
+  background-color: rgba(255, 255, 255, 0.1);
 }
 
 /* text */
@@ -190,6 +196,62 @@ h4 {
 #skills img {
   height: 80px;
   margin: 10px auto;
+}
+
+#contact {
+  background-color: #080936;
+  padding: 30px 20px;
+}
+
+#contact h3,
+#contact p {
+  text-align: center;
+  margin-bottom: 0;
+}
+
+#contact form {
+  margin: 20px auto;
+  width: 80%;
+  max-width: 400px;
+  text-align: center;
+}
+
+#contact input,
+#contact textarea {
+  margin: 10px 0;
+  width: 100%;
+}
+
+#contact .button {
+  margin-top: 10px;
+}
+
+footer {
+  background-color: #14153d;
+  padding: 30px 20px;
+  background-image: url('./assets/images/footer_image.png');
+  background-size: 40%;
+  background-repeat: no-repeat;
+  background-position: top center;
+}
+
+footer .copyright {
+  grid-column: 1/3;
+  font-size: 0.8em;
+}
+
+footer .social {
+  grid-column: 7/9;
+  display: flex;
+  justify-content: flex-end;
+}
+
+footer .social li {
+  margin: 0 6px;
+}
+
+footer img {
+  width: 20px;
 }
 
 /* small tablets styles */
