finished laptop style.

--- a/style.css
+++ b/style.css
@@ -347,11 +347,45 @@ footer img {
   #welcome {
     padding-bottom: 40px;
   }
-  
+
   #welcome .welcome-text {
     align-self: center;
   }
 
+  .projects a:first-child {
+    grid-column: 2/4;
+  }
+
+  .projects a:nth-child(2) {
+    grid-column: 4/6;
+    padding-top: 140px;
+  }
+
+  .projects a:last-child {
+    grid-column: 6/8;
+  }
+
+  .projects a * {
+    max-width: 80%;
+    margin: 10px 10%;
+  }
+
+  #skills {
+    padding: 30px 20px;
+  }
+
+  #skills ul {
+    margin: 40px auto;
+  }
+
+  #skills ul li {
+    grid-column: span 2;
+  }
+
+  footer {
+    padding: 40px 20px;
+    background-size: 25%;
+  }
 }
 
 /* desktop styles */
