--- a/style.css
+++ b/style.css
@@ -393,6 +393,35 @@ footer img {
   body {
     font-size: 20px;
   }
+
+  #welcome,
+  #porfolio,
+  #skills,
+  #contact {
+    padding: 90px 0;
+  }
+
+  .projects a:first-child {
+    grid-column: 1/3;
+  }
+
+  .projects a:last-child {
+    grid-column: 7/9;
+  }
+
+  .projects a * {
+    max-width: 100%;
+    margin: 30px 0;
+  }
+
+  footer {
+    padding: 80px 0;
+    backround-size: 30%;
+  }
+
+  footer img {
+    width: 30px;
+  }
 }
 
 /* grid test */
